# painting-environment-lab-multi-head-network

./: .gitignore  README.md  TEST_RESULT.txt  pyproject.toml
artifacts/: dataset.npz  model.pt  result.json
artifacts/demo-seed-1/: result.json
artifacts/demo-seed-10/: result.json
artifacts/demo-seed-2/: result.json
artifacts/demo-seed-3/: result.json
artifacts/demo-seed-4/: result.json
artifacts/demo-seed-5/: result.json
artifacts/demo-seed-6/: result.json
artifacts/demo-seed-8/: result.json
artifacts/demo-seed-9/: result.json
docs/: 01-why-remove-dagger.md  02-one-network-two-heads.md  03-improvement-collapse.md  04-target-transforms.md  05-loss-balancing.md  06-threshold-calibration.md  07-next-step-dagger.md  08-example-run-analysis.md  09-design-review.md  10-failure-analysis.md  11-hypotheses.md  12-experiment-03-analysis-design.md  13-experiment-1-results.md  13-phase-1-summary.md  experiment-1-seed-summary.csv
docs/experiments/: 01-problem-discovery.md  03-experiment-2-teacher-student-comparison.md  04-experiment-3-trajectory-analysis.md
results/experiment-03-trajectory-analysis/seed-07/: result.json  trajectory-analysis.json  (+1 more)
scripts/: build_dataset.py  calibrate_threshold.py  diagnose.py  run_demo.py  run_demo_oracle.py  run_teacher.py  run_trajectory_analysis.py  train.py
src/painting_multi_head/: __init__.py  action_space.py  dataset.py  diagnostics.py  environment.py  metrics.py  model.py  palette.py  renderer.py  targets.py  teacher.py  training.py  transforms.py
tests/: test_model.py  test_teacher.py  test_transform.py
(+3 files in other folders)
